# aichestra

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  Audit_prompt.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tmp.md  tsconfig.base.json  tsconfig.typecheck.json
.aichestra/: config.yaml
.codex/: config.example.toml
crates/aich-cli/: Cargo.toml
crates/aich-cli/src/: agent.rs  apply.rs  approval.rs  auth.rs  checks.rs  cleanup_state.rs  command_line.rs  config.rs  doctor.rs  formatting.rs  lib.rs  main.rs  manifest.rs  manifest_adapter.rs  manifest_command.rs  options.rs  preflight.rs  queue.rs  reject.rs  rework.rs  semantic_review.rs  session.rs  status.rs  tests.rs
crates/aich-cli/src/semantic_review/: adapter.rs  config.rs  mod.rs  parser.rs  report.rs
crates/aich-cli/src/tests/: e2e.rs  manifest.rs  merge_workflow.rs  preflight.rs  queue_doctor.rs  semantic_review.rs  session_lifecycle.rs  smoke.rs  support.rs
design_docs/: AICHESTRA_BOOTSTRAP.md  AICHESTRA_CODEX_CONFLICT_MANAGER_V0.md  AICHESTRA_CODEX_NEXT_STEPS.md  AICHESTRA_CODEX_PHASE3_TO_PHASE4_WORK_ORDERS.md  AICHESTRA_TECH_STACK_BLUEPRINT.md
docs/: ACCEPTANCE_SCENARIOS.md  ARCHITECTURE.md  Aichestra_Closed_Enterprise_LLM_Provider_Design.docx  MERGE_ALGORITHM.md  README.md  SEMANTIC_MERGE.md  architecture.md  architecture_mvp.mermaid  architecture_prod.mermaid  auth-rbac-readiness.md  bootstrap-gap-report.md  change_manifest_sample.yaml  conflict-manager-v0.md  conflict-manager-v1.md  design-conformance-audit.claude.md  mvp-scope.md  (+37 more)
(+490 files in other folders)
