[workspace]
members = [
  "crates/aich-cli",
  "crates/aich-core",
  "crates/aich-git",
  "crates/aich-ledger",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
aich-core = { path = "crates/aich-core" }
aich-git = { path = "crates/aich-git" }
aich-ledger = { path = "crates/aich-ledger" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.9"
