[package]
name = "aich-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "aich"
path = "src/main.rs"

[dependencies]
aich-core.workspace = true
aich-git.workspace = true
aich-ledger.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[lib]
path = "src/lib.rs"
